<resources>
    <string name="app_name">WayMovility</string>
    <string name="title_home">Inicio</string>
    <string name="title_account">Perfil</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="title_maps">Buscar</string>
    <string name="title_gp">Grupos</string>
    <string name="Start">Origen</string>
    <string name="email">Correo Electronico</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="clave">Contraseña</string>
    <string name="first_fragment_label"></string>
    <string name="second_fragment_label"></string>
    <string name="title_activity_step_register">StepRegisterActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
     <string name="codigoempresa">Codigo de la empresa</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="documento">Documento</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo">Correo Electronico</string>
    <string name="clave1">Contraseña</string>
    <string name="clave2">Confirmacion de contraseña</string>
    <string name="telefono">Telefono</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>